--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
          <p>Hazel</p>
          <a class="contact" href="#contact">Contact Me</a>
       </header>
+
+      <div class="hero-content">
+         <h1 class="tagline">
+            I’m a <em>Scientist</em> and <em>Speaker</em> who is interested in the psychology of greed.
+         </h1>
+      </div>
    </section>
 
 </body>
